--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/25e8cb4e30.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Medical Hardy</title>
 </head>
 <body>
 
