--- a/index.html
+++ b/index.html
@@ -573,9 +573,9 @@
                     <h5>Get In Touch</h5>
                     <p class="paragraph"> <i class="fa-solid fa-phone"></i> (480) 555-0103</p>
                     
-                   <div style="display: flex; align-items:center;">
+                   <div style="display: flex; align-items:center;gap:7px">
                     <i class="fa-solid fa-location-dot"></i>
-                    <p style="text-align: left;" class="paragraph"> 4517 Washington Ave. Manchester,<br>
+                    <p  class="paragraph"> 4517 Washington Ave. Manchester,<br>
                         Kentucky 39495</p>
                    </div>
                     <p class="paragraph"> <i class="fa-regular fa-envelope"></i> debra.holt@example.com</p>
